fix(@dpc-sdp/ripple-ui-core): :lipstick: spacing tweak to search icon on mobile

--- a/packages/ripple-ui-core/src/components/primary-nav/primary-nav.css
+++ b/packages/ripple-ui-core/src/components/primary-nav/primary-nav.css
@@ -217,6 +217,14 @@
     transform: translateY(3px);
   }
 
+  &.rpl-primary-nav__nav-bar-icon--search {
+    margin-right: var(--rpl-sp-2);
+
+    @media (--rpl-bp-s) {
+      margin-right: 0;
+    }
+  }
+
   .rpl-primary-nav__nav-bar-action--active & {
     transform: rotate(180deg);
   }
